--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <br><br>A non-node.js version of the page is <a href="rr-scorekeeper.html">here</a>.
         <br><a href="https://github.com/sprinklej/RR-WebApp" target="_blank">Code</a></p>
         
+        <hr class="style-three">
         <h2>MusicXML Parser</h2>
         <img src="images/Projects/musicXML Screen Shot.png" title="musicXML" alt="musicXML screen shot">
         <p>MusicXML Parser was my honours project, it is a Java/JavaFX based project that keeps track of and parses musicXML files. MusicXML files store sheet music in a plain text format using XML. The purpose of this project was to build the foundations of an application where musicians can keep all of their digital sheet music (stored as musicXML files) in one place. Keeping digital sheet music in plain text allows the music to be more easily transposed or edited, versus the more common way of storing digital sheet music as PDFs.
         <br><br><a href="https://service.scs.carleton.ca/content/honours-project-joel-sprinkle" target="_blank">Abstract</a>
         <br><a href="https://github.com/sprinklej/musicXML" target="_blank">Code</a></p>
 
+        <hr class="style-three">
         <h2>Ubuntu Server</h2>
         <img class="imgshadow" src="images/Projects/Ajenti dashboard.png" title="Ajenti dashboard" alt="Ajenti dashboard" width="450">
         <p>I wanted a NAS device but after looking at several that were available for purchase, I realized that I wanted something with more flexibility. In building an Ubuntu server, I was able to create the functionality of a NAS device but also got something that I can continue to tinker with and learn from.</p>
@@ -78,6 +80,7 @@
           <li><a href="https://nodejs.org" target="_blank">Node.js</a> - Web server - For my most recent project: <a href="#rr-scorekeeper">RR-ScoreKeeper</a></li>
         </ul>
 
+        <hr class="style-three">
         <h2>cuPID</h2>
         <img class="imgshadow" src="images/Projects/cuPID Login Screen.png" title="cuPID login screen" alt="cuPID login screen" style="width:255px">
         <p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to an SQLite database to keep track of the students and groups. As well the project was built in Ubuntu 14.04 LTS Desktop version.
