--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         </ul>
 
         <hr class="style-three">
+        <h2>Kernel Hack</h2>
+        <img class="imgshadow" src="images/Projects/KernelHack.png" title="Kernel Hack code snippet" alt="Kernel Hack code snippet" style="width:450px">
+        <p>My Kernel hack, was a cheeky project for my Operating Systems class, it modified the execve system call into not completing users commands unless the user "bullied" the system. Seeing frustrated people swear at their computers sparked the idea in my mind that you should be able to call your computer names or bully the computer in order to get it to do what you want. Bullying of the system is done by adding specific words as arguments to the command that the user is currently trying to run. This project was built in Ubuntu 14.04 using Linux kernel version 3.16.
+        <br><br><a href="https://github.com/sprinklej/KernelHack" target="_blank">Code</a></p>
+        
+        <hr class="style-three">
         <h2>cuPID</h2>
         <img class="imgshadow" src="images/Projects/cuPID Login Screen.png" title="cuPID login screen" alt="cuPID login screen" style="width:255px">
         <p>Carleton University Project Partner IDentifier was a group project for COMP 3004, it matches students into teams based on the students qualifications. Some of the qualifications include grades, communication skills, and creativity. The application is C++ based, it uses Qt Framework for the GUI and it is connected to an SQLite database to keep track of the students and groups. As well the project was built in Ubuntu 14.04 LTS Desktop version.
