--- a/rr-scorekeeper.html
+++ b/rr-scorekeeper.html
@@ -201,8 +201,7 @@
           <a href="https://pugjs.org/api/getting-started.html" target="_blank">pug</a>,
           <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>,
           and <a href="http://jquery.com" target="_blank">jQuery</a>
-          and has been modified to be displayed here.
-          <br>The original code is <a href="https://github.com/sprinklej/RR-WebApp" target="_blank">here</a>.</p>
+          and has been modified to be displayed here. The original code is <a href="https://github.com/sprinklej/RR-WebApp" target="_blank">here</a>.</p>
         <p><small style="color:grey;">Created by: <a href="index.html">Joel Sprinkle</a></small></p>
       </div>
       
