--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <li>Languages: C, C++, Java, JavaScript, Python</li>
           <li>Connecting to and accessing SQL and NoSQL databases: SQLite, MongoDB</li>
           <li>Completed <a href="https://www.codecademy.com" target="_blank">codecademy</a> courses: HTML & CSS, JavaScript, jQuery, Ruby</li>
+          <li>Web development using: Node.js/Express, pug, Bootstrap, jQuery</li>
           <li>Can work in: Mac, Linux, Windows</li>
         </ul>
 		
