--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				
         <hr class="style-two">
         <h1 id="about">#About</h1>
-        <p>Hi, I'm Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given Thursday or Friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/TV. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>BattleStar Galactica Wars</strike> Battlestar Galactica/Star Trek/Star Wars, to Parks and Rec/Modern Family. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
+        <p>Hi, I'm Joel Sprinkle (yes that is my real last name). I am software developer that just graduated from Carleton University. When I'm not sitting behind a computer, on any given Thursday or Friday evening I can usually be found bouldering at <a href="http://www.altitudegym.ca" target="_blank">Altitude</a> rock climbing gym. During the winter I turn into an indoor kid, spending a lot of time watching movies/TV. For the most part I like fantasy, sci-fi, and comedies, so everything from <strike>BattleStar Galactica Wars Trek</strike> Battlestar Galactica/Star Trek/Star Wars, to Parks and Rec/Modern Family/Life In Pieces. During the summer months I enjoy getting outside whether that is on my bike, my skateboard, or just out for a walk.</p>
 				
         <!-- slide show -->
         <div class="picbox">
@@ -174,7 +174,7 @@
         </ul>
 		
         <h2>Education and Honours</h2>
-        <h3>Carleton University	2014 - 2017</h3>
+        <h3>Carleton University	2014 - Dec. 2016</h3>
         <ul>
           <li>Graduated With High Distinction</li>
           <li>Bachelor of Computer Science Honours, Software Engineering Stream</li>
