--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </ul>
 		
         <h2>Education and Honours</h2>
-        <h3>Carleton University	2014 - Dec. 2016</h3>
+        <h3>Carleton University	2014 - December 2016</h3>
         <ul>
           <li>Graduated With High Distinction</li>
           <li>Bachelor of Computer Science Honours, Software Engineering Stream</li>
