--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <header>
         <h1>Joel Sprinkle</h1>
         <img class="portrait" src="images/Me/portrait.png" alt="Me" style="width:200px;">
-        <p>BCS - Graduated With High Distinction<br>Carleton University, 2017</p>
+        <p>BCS - Graduated With High Distinction<br>Carleton University, Dec. 2016</p>
         
         <p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
         <a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"></a>
