--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <img class="portrait" src="images/Me/portrait.png" alt="Me" style="width:200px;">
         <p>BCS - Graduated With High Distinction<br>Carleton University, Dec. 2016</p>
         
-        <p><script type="text/javascript">writeMe();</script><img src="images/Write/318-108266.jpg" height="32"></a>
-        <a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"></a>
+        <p><a href="https://github.com/sprinklej" target="_blank"><img src="images/GitHub/GitHub-Mark-32px.png" alt="GitHub"></a>
         <a href="http://linkedin.com/in/JoelSprinkle" target="_blank"><img src="images/LinkedIn/In-2CRev-34px-R.png" alt="LinkedIn" height="32"></a></p>
         
         <p><a href="#projects">Projects</a><br>
